# multicardz

./: .coveragerc  .env.example  .env.public  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  benchmark_registry_optimization.py  conftest.py  fastapi_console.log.py  package.json  profile_1m_test.py  pyproject.toml  pytest.ini  run_tests.py  setup_python313_jit.sh  setup_test_environment.py  test_cards_layout.py  test_container_width.py  test_drag_debug.py  test_html5_drag.py  test_layout_quick.py  test_lesson2_drag.py  test_lesson_flow.py  test_lesson_quick.py  test_real_drag.py  test_runner.py  test_tag_drop_persist.py  test_title_persistence.py  vite.config.js
.claude/: CLAUDE.local.md  commit-rules.md  (+2 more)
apps/admin/: demo.html  health-demo.html  main.py  pyproject.toml
apps/admin/static/css/: admin.css
apps/admin/static/js/: admin-spatial.js
apps/admin/templates/: base_admin.html
apps/admin/templates/pages/: dashboard.html  deployments.html  health-applications.html  users.html
apps/public/: alembic.ini  main.py  pyproject.toml
apps/public/config/: __init__.py  database.py
apps/public/middleware/: ab_test_middleware.py
apps/public/migrations/: env.py
apps/public/migrations/versions/: 20251023_0011_25a8d12d52be_create_landing_page_tables.py  20251023_0026_8dc6d9c14aea_create_analytics_tables.py  20251023_0042_4fef33252c0a_create_conversion_tables.py  20251023_2008_3de712318974_change_user_id_to_text.py  20251023_2013_753380067677_make_conversion_funnel_session_id_.py  20251023_2107_04d50b17eb09_add_performance_indexes.py  20251024_1420_create_ab_test_tables.py
apps/public/models/: __init__.py  analytics.py  landing_page.py  orm.py
apps/public/routes/: ab_testing.py  admin.py  analytics.py  funnel.py  landing_pages.py  webhooks.py
apps/public/scripts/: run_migration.py
apps/public/services/: ab_test_service.py  content_migration.py  dashboard_service.py  funnel_service.py  landing_page_service.py  smart_routing_service.py  template_service.py  webhook_service.py
apps/public/static/js/: ab-testing.js  analytics.js  conversion-tracking.js  mouse-tracking.js
apps/public/templates/: base.html  landing_page.html
apps/public/templates/admin/: dashboard.html
apps/public/tests/: conftest.py  test_admin_dashboard_simple.py  test_analytics_api_smoke.py
apps/public/tests/features/: ab_test_assignment.feature  ab_test_results.feature  admin_dashboard.feature  analytics_integration.feature  analytics_schema.feature  auth0_webhook.feature  content_migration.feature  conversion_schema.feature  conversion_tracking_js.feature  core_analytics_js.feature  end_to_end_validation.feature  fastapi_app.feature  funnel_tracking.feature  landing_page_routes.feature  landing_page_schema.feature  load_testing.feature  migration_execution.feature  mouse_tracking_js.feature  page_view_api.feature  performance_indexes.feature  pydantic_models.feature  session_api.feature  smart_routing.feature  template_rendering.feature
apps/public/tests/fixtures/: ab_results_fixtures.py  ab_test_fixtures.py  admin_fixtures.py  analytics_fixtures.py  analytics_js_fixtures.py  api_fixtures.py  auth0_webhook_fixtures.py  conversion_fixtures.py  conversion_tracking_fixtures.py  fastapi_fixtures.py  funnel_tracking_fixtures.py  integration_fixtures.py  landing_page_fixtures.py  load_testing_fixtures.py  migration_fixtures.py  model_fixtures.py  mouse_tracking_fixtures.py  performance_fixtures.py  route_fixtures.py  smart_routing_fixtures.py  template_fixtures.py
apps/public/tests/step_defs/: test_ab_test_assignment.py  test_ab_test_results.py  test_analytics_integration.py  test_analytics_schema.py  test_auth0_webhook.py  test_content_migration.py  test_conversion_schema.py  test_conversion_tracking_js.py  test_core_analytics_js.py  test_end_to_end_validation.py  test_fastapi_app.py  test_funnel_tracking.py  test_landing_page_routes.py  test_landing_page_schema.py  test_load_testing.py  test_migration_execution.py  test_mouse_tracking_js.py  test_performance_indexes.py  test_pydantic_models.py  test_session_api.py  test_smart_routing.py  test_template_rendering.py
apps/shared/: old_core.py  pyproject.toml  storage_strategy.py
apps/shared/config/: __init__.py  connection_router.py  database.py  database_mode.py
apps/shared/data/: onboarding_lessons.py
apps/shared/middleware/: auto_migration.py  database_validator.py  request_interceptor.py
apps/shared/migrations/: __init__.py  auto_migrator.py  fast_detector.py  types.py
apps/shared/models/: __init__.py  card.py  database_models.py  orm_models.py  user.py  user_preferences.py  workspace.py  zero_trust_models.py
apps/shared/repositories/: __init__.py  base_repository.py  card_repository.py  tag_repository.py
apps/shared/scripts/: populate_lesson_database.py
apps/shared/services/: bitmap_filter.py  bitmap_operations.py  bitmap_sync.py  browser_database.py  card_creation_integration.py  card_service.py  database_connection.py  database_schema.py  database_storage.py  group_expansion.py  group_handlers.py  group_storage.py  group_visual.py  lesson_service.py  performance_optimization.py  performance_tracker.py  query_router.py  set_operations_unified.py  tag_count_maintenance.py  turso_privacy_manager.py  ui_mode_switching.py
apps/shared/static/js/: group-tags.js
apps/shared/static/styles/: group-tags.css
(+367 files in other folders)
