[project]
name = "multicardz-admin"
version = "0.1.0"
description = "multicardz Admin Application - Administrative interface and management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.2",
    "uvicorn>=0.35.0",
    "jinja2>=3.1.2",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    # Workspace shared dependencies
    "multicardz-shared",
]

[tool.uv.sources]
multicardz-shared = { workspace = true }

[project.optional-dependencies]
dev = [
    "ruff>=0.13.0",
    "mypy>=1.0.0",
    "pytest>=7.4.3",
    "pytest-bdd>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",  # For testing FastAPI
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.mypy]
extend = "../../pyproject.toml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
