[project]
name = "multicardz-public"
version = "0.1.0"
description = "MultiCardz Public API - External facing API and documentation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.2",
    "uvicorn>=0.35.0",
    "jinja2>=3.1.2",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    # Workspace shared dependencies
    "multicardz-shared",
]

[tool.uv.sources]
multicardz-shared = { workspace = true }

[project.optional-dependencies]
dev = [
    "ruff>=0.13.0",
    "mypy>=1.0.0",
    "pytest>=7.4.3",
    "pytest-bdd>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",  # For testing FastAPI
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.mypy]
extend = "../../pyproject.toml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
